--- a/bs-config.json
+++ b/bs-config.json
@@ -1,8 +1,6 @@
 {
-  "server": {
-    "baseDir": "src",
-    "routes": {
-      "/node_modules": "node_modules"
+    "server": {
+        "baseDir": "src",
+        "routes": {"/node_modules": "node_modules"}
     }
-  }
 }
