--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose"
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "sass": "node-sass src/stylesheets -o src/dist"
   },
   "keywords": [],
   "author": "",
