--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Collecting faces for fun and profit.",
   "scripts": {
-    "build": "tsc -p src/",
-    "build:watch": "tsc -p src/ -w",
+    "build": "npm run compile",
+    "build:watch": "npm run compile:watch",
     "build:e2e": "tsc -p e2e/",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
@@ -20,7 +20,9 @@
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "sass": "node-sass src/stylesheets -o src/dist",
-    "sass:watch": "node-sass src/stylesheets -wro src/dist"
+    "sass:watch": "node-sass src/stylesheets -wro src/dist",
+    "compile": "tsc -p src/",
+    "compile:watch": "tsc -wp src/"
   },
   "keywords": [],
   "author": "",
