--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Collecting faces for fun and profit.",
   "scripts": {
-    "build": "npm run compile",
-    "build:watch": "npm run compile:watch",
+    "build": "concurrently \"npm run sass\" \"npm run compile\"",
+    "build:watch": "concurrently \"npm run sass:watch\" \"npm run compile:watch\"",
     "build:e2e": "tsc -p e2e/",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
