--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "~4.2.0",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "node-sass": "^4.5.3",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
