--- a/bs-config.json
+++ b/bs-config.json
@@ -2,5 +2,7 @@
     "server": {
         "baseDir": "src",
         "routes": {"/node_modules": "node_modules"}
-    }
+    },
+    "reloadDebounce": 2000
 }
+
