--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "sass": "node-sass src/app -o src/app",
-    "sass:watch": "node-sass src/app -wro src/app",
+    "sass": "node-sass src/app/ -o src/app",
+    "sass:watch": "nodemon",
     "compile": "tsc -p src/",
     "compile:watch": "tsc -w -p src/"
   },
@@ -29,40 +29,43 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@angular/animations": "~4.2.0",
+    "@angular/cdk": "2.0.0-beta.8",
     "@angular/common": "~4.2.0",
     "@angular/compiler": "~4.2.0",
     "@angular/core": "~4.2.0",
     "@angular/forms": "~4.2.0",
     "@angular/http": "~4.2.0",
-    "@angular/material": "2.0.0-beta.7",
+    "@angular/material": "2.0.0-beta.8",
     "@angular/platform-browser": "~4.2.0",
     "@angular/platform-browser-dynamic": "~4.2.0",
     "@angular/router": "~4.2.0",
-    "angular-in-memory-web-api": "~0.3.0",
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "node-sass": "^4.5.3",
-    "rxjs": "5.0.1",
+    "@covalent/core": "1.0.0-beta.6",
+    "angular-in-memory-web-api": "0.3.0",
+    "core-js": "~2.5.0",
+    "hammerjs": "~2.0.8",
+    "node-sass": "~4.5.3",
+    "rxjs": "~5.4.3",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.3.0",
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.86",
     "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
+    "concurrently": "^3.2.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
+    "nodemon": "^1.11.0",
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "tslint": "^3.15.1",
+    "typescript": "~2.3.0"
   },
   "repository": {}
 }
