Make the compiler a little less lax.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -11,7 +11,11 @@
             "dom"
         ],
         "noImplicitAny": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true
     }
 }
 
