Add local build environment files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,10 @@ jspm_packages
 #
 !src/script.js
 
+###########################
+# Local build environment #
+###########################
+
+# Build scripts.
+#
+*.sh
