--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
-    "@angular/animations": "~4.2.0",
-    "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "~4.2.0",
-    "@angular/compiler": "~4.2.0",
-    "@angular/core": "~4.2.0",
-    "@angular/forms": "~4.2.0",
-    "@angular/http": "~4.2.0",
-    "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "~4.2.0",
-    "@angular/platform-browser-dynamic": "~4.2.0",
-    "@angular/router": "~4.2.0",
-    "@covalent/core": "1.0.0-beta.6",
-    "core-js": "~2.5.0",
+    "@angular/animations": "^4.4.5",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^4.4.5",
+    "@angular/compiler": "^4.4.5",
+    "@angular/core": "^4.4.5",
+    "@angular/forms": "^4.4.5",
+    "@angular/http": "^4.4.5",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^4.4.5",
+    "@angular/platform-browser-dynamic": "^4.4.5",
+    "@angular/router": "^4.4.5",
+    "@covalent/core": "^1.0.0-beta.8-1",
+    "core-js": "^2.5.1",
     "hammerjs": "~2.0.8",
     "node-sass": "~4.5.3",
     "rxjs": "~5.4.3",
@@ -38,13 +38,13 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@types/node": "^6.0.88",
+    "@types/node": "^6.0.89",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    "nodemon": "^1.11.0",
-    "rimraf": "^2.5.4",
+    "nodemon": "^1.12.1",
+    "rimraf": "^2.6.2",
     "tslint": "^5.6.0",
     "typescript": "~2.4.0"
   },
