--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@angular/core": "^4.4.5",
     "@angular/forms": "^4.4.5",
     "@angular/http": "^4.4.5",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/material": "2.0.0-beta.12",
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
-    "@covalent/core": "^1.0.0-beta.8-1",
+    "@covalent/core": "1.0.0-beta.8-1",
     "core-js": "^2.5.1",
     "hammerjs": "~2.0.8",
     "node-sass": "~4.5.3",
